@@ -1,30 +1,9 @@
-FROM tomcat:7.0.92-jre7-alpine
+FROM geosolutionsit/mapstore2:latest
 MAINTAINER geosolutions<info@geo-solutions.it>
 
-# Install utilities
-RUN  apk update \
-     && apk add vim \
-     && rm -rf /var/cache/apk/*
+# externalize geostore configuration
+ENV JAVA_OPTS="${JAVA_OPTS} -Dgeostore-ovr=file://${CATALINA_BASE}/conf/geostore-datasource-ovr.properties"
 
-# Tomcat specific options
-ENV CATALINA_BASE "$CATALINA_HOME"
-ENV JAVA_OPTS="${JAVA_OPTS}  -Xms512m -Xmx512m -XX:MaxPermSize=128m"
+RUN rm -rf ${CATALINA_BASE}/webapps
 
-# Optionally remove Tomcat manager, docs, and examples
-ARG TOMCAT_EXTRAS=false
-RUN if [ "$TOMCAT_EXTRAS" = false ]; then \
-      find "${CATALINA_BASE}/webapps/" -delete; \
-    fi
-
-# Add war files to be deployed
-COPY docker/*.war "${CATALINA_BASE}/webapps/"
-
-# Geostore externalization template. Disabled by default
-COPY docker/geostore-datasource-ovr.properties "${CATALINA_BASE}/conf/"
-ARG GEOSTORE_OVR_OPT=""
-ENV JAVA_OPTS="${JAVA_OPTS} ${GEOSTORE_OVR_OPT}"
-
-# Set variable to better handle terminal commands
-ENV TERM xterm
-
-EXPOSE 8080
+ADD mapstore.war "${CATALINA_BASE}/webapps/mapstore.war"
